# MLEncrypt-Research

./: .gitignore  .travis.yml  Pipfile  README.md  cli.py  hello.txt  mlencrypt.py  projector.py  pyproject.toml  requirements.txt  run.py  setup.py  tb.sh  test.dcm  test.txt  torch-tensorboard.py  tpm.py  update_rules.py
mlencrypt_research/: cli.py  mlencrypt.py  tpm.py
mlencrypt_research/summaries/: __init__.py  boxplot.py  heatmap.py  stats.py
mlencrypt_research/tpm/: __init__.py  basic.py  geometric.py  summaries.py
mlencrypt_research/tpms/: __init__.py  basic.py  probabilistic.py
mlencrypt_research/update_rules/: __init__.py  basic.py  probabilistic.py
ray-project/: cluster.yaml  project.yaml
results/: hparams.py  time_taken.py  time_taken.r
results/analysis/hparams/: figures.R  hparams.py  process.R  processed.csv
results/analysis/hparams/averaged/: averaged-with-attack.csv  averaged.R  averaged.csv  figures.R  pareto.R  torch-tensorboard.py
results/analysis/hparams/original/: figures.R  hparams.py  pareto.R  rawdata.csv  rawdata.tsv  torch-tensorboard.py
results/analysis/training-time/: time_taken.R  time_taken.csv  time_taken.py  training_time.R  training_time.csv  training_time.py
results/snowy/snowy1/: events.out.tfevents.1577067052.snowy.1378.5.v2
results/snowy/snowy1/run-0/: events.out.tfevents.1577067052.snowy.1378.19.v2
results/snowy/snowy1/run-1/: events.out.tfevents.1577067057.snowy.1378.276946.v2
results/snowy/snowy1/run-10/: events.out.tfevents.1577067130.snowy.1378.3742828.v2
results/snowy/snowy1/run-100/: events.out.tfevents.1577067863.snowy.1378.38654152.v2
results/snowy/snowy1/run-1000/: events.out.tfevents.1577185040.snowy.1378.5619498433.v2
results/snowy/snowy1/run-1001/: events.out.tfevents.1577185423.snowy.1378.5637545777.v2
results/snowy/snowy1/run-1002/: events.out.tfevents.1577185802.snowy.1378.5655457567.v2
results/snowy/snowy1/run-1003/: events.out.tfevents.1577186050.snowy.1378.5667141007.v2
results/snowy/snowy1/run-1004/: events.out.tfevents.1577186308.snowy.1378.5679387979.v2
results/snowy/snowy1/run-1005/: events.out.tfevents.1577186563.snowy.1378.5691537756.v2
results/snowy/snowy1/run-1006/: events.out.tfevents.1577186787.snowy.1378.5702182651.v2
results/snowy/snowy1/run-1007/: events.out.tfevents.1577187125.snowy.1378.5718285180.v2
results/snowy/snowy2/: events.out.tfevents.1577213908.snowy.30064.5.v2
results/snowy/snowy3/: events.out.tfevents.1577383391.snowy.47895.5.v2
results/snowy/snowy4/: events.out.tfevents.1577573452.snowy.63283.5.v2
results/zoidberg/zoidberg1/: events.out.tfevents.1577232307.zoidberg.csl.tjhsst.edu.2838.5.v2
results/zoidberg/zoidberg2/: events.out.tfevents.1577406832.zoidberg.csl.tjhsst.edu.6693.5.v2
tests/: test_hparams.py  test_multiple.py  test_single.py
(+1842 files in other folders)
