[tool.poetry]
name = "mlencrypt-research"
version = "0.1.0"
description = "Hyperparameter Optimization of Tree Parity Machines to Minimize the Effectiveness of Unconventional Attacks on Neural Cryptography​."
authors = ["sumanthratna <sumanthratna@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.2"
seaborn = "^0.10.0"
torch = "^1.4.0"
tensorflow = "^2.1.0"
tensorflow-estimator = "2.1.0"
setuptools = "41.0.0"
click = "^7.1.1"
ray = {extras = ["tune"], version = "^0.8.4"}
hyperopt = {git = "https://github.com/hyperopt/hyperopt.git"}
bayesian-optimization = "^1.1.0"
nevergrad = "^0.4.0"
scikit-optimize = "^0.7.4"
dragonfly-opt = "^0.1.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
