[tool.poetry]
name = "mlencrypt-research"
version = "0.1.0"
description = "Hyperparameter Optimization of Tree Parity Machines to Minimize the Effectiveness of Unconventional Attacks on Neural Cryptography."
authors = ["Sumanth Ratna <sumanthratna@gmail.com>", "Anika Karpurapu"]

[tool.poetry.dependencies]
python = "^3.8.2"
numpy = "^1.18.4"
seaborn = "^0.10.1"
tensorflow = "^2.2.0"
setuptools = "41.0.1"
click = "^7.1.2"
ray = {extras = ["tune"], version = "^0.8.5"}
hyperopt = {git = "https://github.com/hyperopt/hyperopt.git"}
bayesian-optimization = "^1.1.0"
nevergrad = "^0.4.1"
scikit-optimize = "^0.7.4"
dragonfly-opt = "^0.1.5"
hpbandster = "^0.7.4"
ConfigSpace = "^0.4.12"
tensorboard_plugin_profile = "^2.2.0"
wandb = "^0.8.35"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
